# finance-core

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: proposal-next-clis.md
migrations/: V5__bank_details.sql  V6__issuer_settings.sql
src/: db.rs  entity.rs  error.rs  lib.rs  money.rs  paths.rs  settings.rs  tax.rs
