[package]
name = "finance-core"
version = "0.3.0"
edition = "2021"
description = "Shared library for the Paperfoot accounting suite — money, tax, entities, and the shared SQLite schema that every finance CLI operates on."
license = "MIT"
repository = "https://github.com/paperfoot/finance-core"
readme = "README.md"
keywords = ["accounting", "finance", "money", "tax", "ledger"]
categories = ["finance", "database"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
refinery = { version = "0.8", features = ["rusqlite"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
figment = { version = "0.10", features = ["toml", "env"] }
toml = "0.8"
thiserror = "2"

[dev-dependencies]
rust_decimal_macros = "1"
tempfile = "3"
